# Matrix-bd

./: .gitignore  DEPLOYMENT.md
backend/: pyproject.toml  railway.json  requirements.lock.txt
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py  session.py
backend/app/domain/: state_machine.py
backend/app/domain/schemas/: audit.py  business_admin.py  common.py  design.py  launch.py  loi.py  nso.py  project.py  site.py  (+2 more)
backend/app/rbac/: guards.py  permissions.py  roles.py
backend/app/routers/: audit.py  auth.py  bd.py  business_admin.py  design.py  launch_approval.py  loi.py  notifications.py  project.py  project_excellence.py  sites.py  staging.py  tenancy.py  users.py
backend/app/services/: _common.py  audit_service.py  bd_service.py  budget_service.py  business_admin_service.py  change_request_service.py  delegation_service.py  design_service.py  finance_service.py  launch_service.py  legal_service.py  loi_service.py  notification_service.py  nso_service.py  photo_service.py  project_excellence_service.py  project_service.py  storage_service.py  workflow_unlocks.py
backend/database/: schema.sql
backend/database/migrations/: 202605221_add_workspace_requests.sql  202606081_passwords_branding_reset.sql  202606093_drop_stale_budget_idx_10_constraint.sql  202606134_project_excellence_module.sql
backend/tests/: test_batch_b_correctness.py  test_batch_sec_auth_config.py  test_batch_sec_authz.py  test_launch_validation_loop.py  test_project_excellence_shared_budget.py  test_write_persistence_regression.py
(+189 files in other folders)
